<resources>
    <string name="app_name">android-rapid</string>
    <string name="app_exit_info">再按一次 退出厨易时代</string>

    <string name="account">充值</string>
    <string name="recharge">确认支付</string>
    <string name="crowdfunding">众筹</string>
    <string name="collection">加入关注</string>
    <string name="delete_collection">移出关注</string>

    <string name="cuxiao">精品促销</string>
    <string name="brand">品牌商直营店</string>

    <string name="search_history">搜索历史:</string>
    <string name="clear_search_history">清空历史记录</string>
    <string name="search_hot">热搜:</string>
    <string name="confirm_clear_search">确定要清除历史记录?</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="synthesize">综合</string>
    <string name="volume">销量</string>
    <string name="price">价格</string>
    <string name="newshop">新品</string>
    <string name="all_select">全选</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="my_ecook_coin">厨易币</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="my_coupons">优惠券</string>

    <string name="username">会员卡号:</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="login_name_hint">请输入卡号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="phone_num">手&#160;&#160;机&#160;&#160;号:</string>

    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="old_pwd">旧密码:</string>
    <string name="new_pwd">新密码:</string>
    <string name="logout">退出登录</string>
    <string name="coupons">优惠券:</string>
    <string name="delivery_time">送货时间:</string>
    <string name="delivery_time2">送货时间</string>
    <string name="actual_total">实付款:</string>
    <string name="settle_accounts">去结算</string>
    <string name="to_pay">去支付</string>
    <string name="confirm_order">您确定支付？确定之后将直接生成订单！</string>
    <string name="confirm_crowdfunding_order">您确定支付，支持项目？</string>
    <string name="in_a_month">一个月内</string>
    <string name="out_a_month">一个月前</string>
    <string name="delivery_method">配送方式:</string>
    <string name="order_num">订&#160;&#160;单&#160;&#160;号:</string>
    <string name="order_time">下单时间:</string>
    <string name="order_detail_preparing">预计送达:</string>

    <string name="order_detail_dispatching">配送时间:</string>
    <string name="order_detail_delivered">送达时间:</string>
    <string name="order_detail_complete">提货时间:</string>
    <string name="order_detail_cancled">取消时间:</string>

    <string name="sendtiem_after_12">12点后订，明天17点前送到</string>
    <string name="sendtiem_before_12">12点前订，今天17点前送到</string>
    <string name="weight">规&#160;&#160;&#160;&#160;&#160;&#160;&#160;格</string>
    <string name="project_introduce">项目介绍</string>
    <string name="from_introduce">产地介绍</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="cancel_favorite">取消关注</string>
    <string name="wechat">关注微信</string>
    <string name="clear_cache">清除缓存</string>
    <string name="change_server">切换服务器</string>
    <string name="save_wechat">保存二维码到手机</string>
    <string name="wechat_notice1">1、保存二维码到手机</string>
    <string name="wechat_notice2">2、启动微信App，并打开扫一扫功能</string>
    <string name="wechat_notice3">3、右上角选择相册，并找到刚刚保存的二维码</string>
    <string name="select_delivery_date">选择送货时间</string>

    <string name="action_settings">Settings</string>

    <string name="official_server">正式服</string>
    <string name="test_server">测试服</string>
    <string name="search_hint">搜索厨易商品</string>
    <string name="search_shop_hint">搜索店铺商品</string>

    <string name="to_charge">去充值</string>
    <string name="ecook_site">厨易站</string>
    <string name="more">更多</string>
    <string name="choiceness">厨易精选</string>
    <string name="site_status_on">运营中</string>
    <string name="site_product">站内商品</string>
    <string name="want_rush">立即购买</string>
    <string name="exchange_product">立即兑换</string>
    <string name="join_crowdfunding">我要参与</string>
    <string name="join_project">参与项目</string>
    <string name="in_shopping">进入店铺</string>


    <string name="add_feedback">新 建 反 馈</string>

    <string name="tv_charge_hint">请输入充值金额</string>
    <string name="et_charge_hint">请输入金额</string>
    <string name="charge_method">请选择充值方式</string>
    <string name="has_no_coupon">无可用</string>
    <string name="use_coupon">使用优惠券</string>

    <string name="up_load_picture">上传图片</string>
    <string name="get_all_product">查看全部商品</string>
    <string name="community_news">社区资讯</string>
    <string name="my_request">我的请求</string>
    <string name="my_help">我的帮忙</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="request_thing">请求事项：</string>
    <string name="request_detail">请求详情：</string>
    <string name="btn_publish">发布</string>
    <string name="btn_help">帮忙</string>
    <string name="help_flow">帮忙进度</string>
    <string name="add_value_service">增值服务</string>
    <string name="have_broadcast">共%1$d条广播，点击查看</string>

    <string name="choose_from_phone">从手机相册选择</string>
    <string name="take_a_picture">拍照</string>

    <string name="in_hand">处理中</string>
    <string name="deal_with">已完成</string>
    <string name="check_order">查看订单</string>
    <string name="complete">完成</string>
    <string name="home_rush_buy">厨易抢购</string>
    <string name="home_topic">厨易专题</string>
    <string name="account_manager">账户管理</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="preparing">准备中</string>
    <string name="unpaid">待支付</string>
    <string name="cancled">已取消</string>
    <string name="delivered">已送达</string>
    <string name="dispatching">配送中</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_concern">我的关注</string>
    <string name="community_help">社区互助互动</string>
    <string name="service_center">客服中心</string>
    <string name="balance_recharge">余额•充值</string>
    <string name="click_guanzhu">点击关注</string>
    <string name="cart">购物车</string>
    <string name="slide_look_detail">--继续拖动查看图文详情--</string>
    <string name="slide_look_project_detail">--继续拖动查看项目介绍--</string>
    <string name="phone">手机号</string>
    <string name="yanzhengma">验证码</string>
    <string name="community">所属小区</string>
    <string name="why_choose">为什么要选择所属小区?</string>
    <string name="get_yanzhengma">获取验证码</string>
    <string name="user_register">用户注册</string>
    <string name="choose_community">选择小区</string>
    <string name="cart_empty">购物车空空如也,快去把它装满吧</string>
    <string name="product_price">商品金额</string>
    <string name="balance_warn">对不起，您账号的余额不足！</string>
    <string name="go_to_look">再去逛逛</string>
    <string name="get_things_name">收货人</string>
    <string name="sell_out">已售完</string>
    <string name="rush_buy_out">已抢完</string>
    <string name="pull_off_shelves">已下架</string>
    <string name="over">已结束</string>
    <string name="good_good_good_price">好货好价&#160;&#160;&#160;先抢先得</string>
    <string name="start">距开始</string>
    <string name="sell_by_myself">厨易自营</string>
    <string name="select_count">已选择%1$d件商品</string>
    <string name="only_num">剩余%1$d件</string>
    <string name="choose_ecook">选择厨易站</string>
    <string name="order_date_preparing">预计送达:%1$s</string>
    <string name="order_time_preparing">下单时间:%1$s</string>
    <string name="order_date_dispatching">配送时间:%1$s</string>
    <string name="order_date_delivered">送达时间:%1$s</string>
    <string name="order_date_complete">提货时间:%1$s</string>
    <string name="order_date_cancled">取消时间:%1$s</string>

    <string name="order_number">订单编号:%1$s</string>
    <string name="rush_buy">抢购</string>
    <string name="warn_me">提醒我</string>
    <string name="click_collection">点击收藏</string>
    <string name="collectioned">已收藏</string>
    <string name="cancle_warn">取消提醒</string>
    <string name="rush_buy_warn">将在开抢前3分钟提醒</string>
    <string name="rush_buy_cancled_warn">抢购提醒已取消，您可能抢不到哦</string>
    <string name="fooditem_try">我也要试试\n(一键购买所有商品)</string>
    <string name="rush_buy_dialog_warn">您有%1$d个抢购商品即将开始</string>
    <string name="wait_to_rush_buy">稍后去抢</string>
    <string name="go_to_rush_buy">马上抢</string>
    <string name="rush_buy_more">继续上滑，更多抢购进行中</string>
    <string name="why_choose_ecook">我们将根据您所选择的所属小区为您匹配合适的厨易站作为默认的自提站点；您在填写订单时也可以根据实际情况更换。</string>
    <string name="user_agreement">用户注册即表示同意厨易时代《用户协议》</string>
    <string name="rush_buy_warn_title">抢购提醒</string>
    <string name="recommend_text">厨易推荐</string>
    <string name="use_coupons_warn">您本次订单可以用优惠券抵扣现金，是否使用？</string>
    <string name="continue_recharge">继续充值</string>
    <string name="go_home">去逛逛</string>
    <string name="detailed_rules">查看本券细则</string>
    <string name="rules">细则</string>
    <string name="jieSuan">去结算</string>
    <string name="start_price">20起送</string>
    <string name="et_input_address">输入收货地址</string>
    <string name="no_change">还未选择商品</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_two">请再次输入密码</string>
    <string name="sure">确认</string>
    <string name="user_new_register">新用户注册</string>
    <string name="login_password">密码登录</string>
    <string name="login_cart_num">卡号登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
