<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.lh.rapid.ui.widget.MyActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <LinearLayout
        android:layout_width="@dimen/px680dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/px118dp"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:background="@drawable/user_login_bg">

            <EditText
                android:id="@+id/et_register_phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="@string/input_phone_num"
                android:textSize="@dimen/px28sp"
                android:inputType="phone"
                android:textColor="@color/search_gray"
                android:layout_marginStart="@dimen/px24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:background="@drawable/user_login_bg"
            android:layout_marginTop="@dimen/px40dp">

            <EditText
                android:id="@+id/et_register_code_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="@string/input_code"
                android:inputType="number"
                android:textSize="@dimen/px28sp"
                android:textColor="@color/search_gray"
                android:layout_marginStart="@dimen/px24dp" />

            <Button
                android:id="@+id/bt_register_get_code"
                android:layout_width="@dimen/px168dp"
                android:layout_height="@dimen/px48dp"
                android:background="@drawable/user_login_bt_bg"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/px28sp"
                android:layout_marginRight="@dimen/px32dp"
                android:layout_marginEnd="@dimen/px32dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:background="@drawable/user_login_bg"
            android:layout_marginTop="@dimen/px40dp">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="@string/input_password"
                android:textSize="@dimen/px28sp"
                android:inputType="phone"
                android:textColor="@color/search_gray"
                tools:ignore="TextFields"
                android:layout_marginStart="@dimen/px24dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:background="@drawable/user_login_bg"
            android:layout_marginTop="@dimen/px40dp">

            <EditText
                android:id="@+id/et_register_password_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="@string/input_password_two"
                android:textSize="@dimen/px28sp"
                android:inputType="phone"
                android:textColor="@color/search_gray"
                tools:ignore="TextFields"
                android:layout_marginStart="@dimen/px24dp" />
        </RelativeLayout>


        <Button
            android:id="@+id/bt_register_sure"
            android:layout_width="@dimen/px280dp"
            android:layout_height="@dimen/px68dp"
            android:layout_marginTop="@dimen/px128dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/user_login_bt_bg"
            android:text="@string/sure"
            android:textSize="@dimen/px32sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
