<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <com.lh.rapid.ui.widget.MyActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px2dp"
        android:background="@color/color_efeff4"/>


    <LinearLayout
        android:layout_width="@dimen/px680dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px118dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:background="@drawable/user_login_bg">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="@string/input_phone_num"
                android:inputType="phone"
                android:textColor="@color/search_gray"
                android:textSize="@dimen/px28sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:layout_marginTop="@dimen/px40dp"
            android:background="@drawable/user_login_bg">

            <Button
                android:id="@+id/btn_validate"
                android:layout_width="@dimen/px168dp"
                android:layout_height="@dimen/px48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px32dp"
                android:background="@drawable/user_login_bt_bg"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/px28sp"/>

            <EditText
                android:id="@+id/et_validate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:layout_toLeftOf="@id/btn_validate"
                android:background="@null"
                android:hint="@string/input_code"
                android:inputType="number"
                android:textColor="@color/search_gray"
                android:textSize="@dimen/px28sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:layout_marginTop="@dimen/px40dp"
            android:background="@drawable/user_login_bg">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="请输入密码"
                android:textColor="@color/search_gray"
                android:textSize="@dimen/px28sp"
                android:inputType="textPassword"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px80dp"
            android:layout_marginTop="@dimen/px40dp"
            android:background="@drawable/user_login_bg">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px24dp"
                android:background="@null"
                android:hint="请再次输入密码"
                android:textColor="@color/search_gray"
                android:textSize="@dimen/px28sp"
                android:inputType="textPassword"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/px280dp"
        android:layout_height="@dimen/px68dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px40dp"
        android:background="@drawable/user_login_bt_bg"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="@dimen/px32sp"/>

</LinearLayout>